# efa_juxtaposition_analysis

./: LICENSE  README.md  config_example.json  pyproject.toml  requirements.txt  setup.bat
efa_juxtaposition_app/: EFA_juxtaposition_app.py  EFA_juxtaposition_launcher.bat  EFA_juxtaposition_launcher_advanced.bat  EFA_juxtaposition_v0p9p4_d1.py  EFA_juxtaposition_v0p9p6d11.py  EFA_juxtaposition_v0p9p9.py  EFA_juxtaposition_v0p9p9d2_guide14.py  build_pyinstaller.bat
efa_juxtaposition_app/test_data/: h1  h2  h3  h4  test_save.pkl
